src/features/interface/Interface.module.css
.Container {
  width: var(--app-width);
  height: 100%;
  position: absolute;
  display: grid;
  grid-template-rows: auto auto 1fr min-content;
  position: absolute;
  overflow: hidden;
  padding-bottom: 0.5rem;
}

.Stats {
  grid-row: 2 / span 1;
  grid-column: 1 / span 1;
  display: grid;
  grid-template-rows: 100%;
  grid-template-columns: repeat(3, 1fr);
  color: var(--text);
  margin: 0.5rem;
}

.StatsComplete {
  grid-row: 1 / span 1;
  grid-column: 1 / span 1;
  justify-self: start;
}

.StatsSpeedrun {
  grid-row: 1 / span 1;
  grid-column: 2 / span 1;
  justify-self: center;
}

.StatsGuesses {
  grid-row: 1 / span 1;
  grid-column: 3 / span 1;
  justify-self: end;
}

.BoardSection {
  height: auto;
  margin-bottom: 0.5rem;
  overflow-y: scroll;
  overflow-x: hidden;
  border-radius: 0.25rem;
  grid-row: 3 / span 1;
  grid-column: 1 / span 1;
  display: grid;
  grid-template-columns: 100%;
  z-index: 3;
}

.KeyboardSection {
  width: var(--app-width);
  display: grid;
  justify-items: center;
  grid-row: 4 / span 1;
  grid-column: 1 / span 1;
}

.Title {
  color: var(--text);
  font-size: 1.5rem;
  text-transform: capitalize;
  margin: 0.25em 0 !important;
  justify-self: center;
  text-align: center;
}

.TitleBar {
  display: grid;
  grid-template-columns: repeat(3, auto);
  grid-template-rows: 100%;
  place-items: center;
  column-gap: 0.3rem;
  grid-row: 1 / span 1;
  grid-column: 1 / span 1;
  margin-top: 0.5rem;
  padding: 0 0.5rem 0.2rem 0.5rem;
}

.TitleBarDivider {
  grid-row: 2;
  grid-column: 1 / span 3;
  height: 0.2rem;
  border-radius: 0.2rem;
  margin-left: 1rem;
  margin-right: 1rem;
  background-color: var(--text);
  width: 100%;
}

@media screen and (pointer: none), (pointer: coarse) {
  .TitleBar {
    grid-template-columns: 100%;
    grid-template-rows: repeat(3, auto);
    gap: 0.3rem;
    margin-bottom: 0.5rem;
    display: flex;
    flex-direction: column;
  }

  .Title {
    margin: 0 !important;
  }

  .TitleBar > * {
    justify-self: center !important;
  }

  .Stats {
    font-size: 0.6em;
  }
}

.Toggle {
  border: 0.05em solid var(--tile-outline);
  border-radius: 0.25em;
  height: 2rem;
  display: flex;
  place-items: center;
  cursor: pointer;
  color: var(--text) !important;
}

.DarkModeToggle {
  margin: 0 0.3rem;
}

.Toggle .DarkModeToggle *:not(mask *) {
  fill: var(--text) !important;
}

.ToolBar {
  display: flex;
  flex-direction: row;
  gap: 0.3rem;
  justify-self: end;
}

.MenuContainer {
  grid-column: 1 / span 1;
  grid-row: 1 / span 3;
  display: grid;
  place-items: center;
}

.Menu {
  width: calc(0.5 * var(--app-width));
  display: flex;
  padding: 2rem;
  background-color: var(--background);
  border: 0.05em solid var(--tile-outline);
  border-radius: 0.25em;
  z-index: 999999;
  color: var(--text);
  flex-direction: column;
}

.OptionList {
  list-style: none;
  padding: 0 !important;
}

.OptionList > li > label {
  cursor: pointer;
}

.OptionList > li > label > input {
  cursor: pointer;
}

.CloseMenu {
  outline: none !important;
  border-radius: 0.2em;
  background-color: var(--key-background);
  border: none;
  color: var(--text);
  font-size: 1.25em;
  cursor: pointer;
}

.PracticeButton {
  outline: none !important;
  border-radius: 0.2em;
  background-color: var(--key-background);
  border: none;
  color: var(--text);
  font-size: 1.5em;
  cursor: pointer;
  justify-self: start;
}

.GameOverMask {
  grid-column: 1 / span 1;
  grid-row: 2 / span 3;
  z-index: 2;
}

/*.GameOverMask + .BoardSection div[class*="Complete"] {
  opacity: 1 !important;
}*/

.GameOverStats {
  border-radius: 0.2rem;
  display: flex;
  gap: 1em;
  background-color: var(--background);
  padding: 1em;
  font-size: 1.25rem;
}

.StatContainer {
  grid-row: 2 / span 3;
  grid-column: 1 / span 1;
  background-color: var(--game-over-background);
  backdrop-filter: blur(2px);
  z-index: 4;
  display: grid;
  place-items: center;
  border-radius: 0.25rem;
}

.ShareCenter {
  display: grid;
  gap: 0.2rem;
  width: calc(var(--app-width) / 3);
  place-items: center;
  grid-template-columns: 100%;
  grid-template-rows: 1fr auto;
}

.CopyButton {
  outline: none !important;
  border-radius: 0.2em;
  border: 2px solid white;
  color: var(--text);
  font-size: 1.25rem;
  cursor: pointer;
  padding: 0.25em;
  grid-column: 1 / span 1;
  width: 100%;
  transition: background-color 0.25s ease-out;
}

.WordsList {
  display: grid;
  grid-template-columns: repeat(4, auto);
  color: var(--text);
  column-gap: 0.5em;
}

.GameStatsDisplay {
  line-height: 1.5;
  color: var(--text);
  grid-column: 1 / span 4;
  text-align: center;
}

.Guesses {
  color: var(--text);
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 0.5em;
  font-size: 1rem;
}

.Guess {
  display: flex;
  gap: 0.25em;
}

.GuessNum {
  height: 1.25em;
  width: 1.25em;
  background-color: rgb(0, 136, 255);
  color: white;
  border-radius: 0.25em;
  line-height: 1.3rem;
  text-align: center;
}

.NotGuessed {
  background-color: rgb(255, 73, 73);
  color: transparent;
}

